change 專業協作 tab title to 歡迎加入

--- a/index.html
+++ b/index.html
@@ -798,7 +798,7 @@
                 <p class="section-subtitle">誠邀所有關心佛教未來的朋友們，一同與我們共同將佛法帶給未來的世代</p>
 
                 <div class="tabs">
-                    <button class="tab active" onclick="showTab('collaborate', this)">專業協作</button>
+                    <button class="tab active" onclick="showTab('collaborate', this)">歡迎加入</button>
                     <button class="tab" onclick="showTab('sponsor', this)">護持贊助</button>
                 </div>
 
@@ -866,7 +866,7 @@
         <div class="container">
             <div class="registration-content">
                 <div class="registration-line"></div>
-                <h3>因陀羅華基金會為在台灣正式註冊的非營利組織</h3>
+                <h3>因陀羅華佛語典藏協會在台灣正式註冊的非營利組織</h3>
                 <p>我們承諾所有資金將完全用於佛法弘揚和知識保存事業，定期公開財務報告，接受各界監督。</p>
                 <div class="registration-line"></div>
             </div>
@@ -875,7 +875,7 @@
 
     <footer>
         <div class="container">
-            <p>&copy; 2025 因陀羅華基金會 Indrajala Foundation. 護持佛法，傳承智慧。</p>
+            <p>&copy; 2025 因陀羅華佛語典藏協會 Indrajala Foundation. 護持佛法，傳承智慧。</p>
             <p>聯繫信箱：contact@indrajala.org | 護持信箱：donation@indrajala.org</p>
         </div>
     </footer>
