add hyperlink to the emails

--- a/index.html
+++ b/index.html
@@ -543,6 +543,18 @@
                 margin: 0.3rem 0;
             }
         }
+        
+        /* Footer email link styling */
+        footer a {
+            color: inherit;
+            text-decoration: none;
+        }
+        
+        footer a:hover {
+            color: inherit;
+            text-decoration: underline;
+            text-decoration-color: white;
+        }
     </style>
 </head>
 <body>
@@ -876,7 +888,7 @@
     <footer>
         <div class="container">
             <p>&copy; 2025 因陀羅華佛語典藏協會 Indrajala Foundation. 護持佛法，傳承智慧。</p>
-            <p>聯繫信箱：contact@indrajala.org | 護持信箱：donation@indrajala.org</p>
+            <p>聯繫信箱：<a href="mailto:contact@indrajala.org">contact@indrajala.org</a> | 護持信箱：<a href="mailto:donation@indrajala.org">donation@indrajala.org</a></p>
         </div>
     </footer>
 
