--- a/index.html
+++ b/index.html
@@ -17,6 +17,32 @@
             line-height: 1.8;
             color: #2D3748;
             background: #FFFFFF;
+            position: relative;
+        }
+        
+        body::before {
+            content: '';
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: url('assets/Watercolor background.png') no-repeat center center;
+            background-size: cover;
+            background-attachment: fixed;
+            opacity: 0.3;
+            z-index: -2;
+        }
+        
+        body::after {
+            content: '';
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(255, 255, 255, 0.7);
+            z-index: -1;
         }
 
         .container {
