replace video with gif

--- a/index.html
+++ b/index.html
@@ -166,13 +166,11 @@
             background: transparent;
         }
 
-        .hero-video video {
+        .hero-video img {
             width: 100%;
             height: auto;
-            border-radius: 0;
-            box-shadow: none;
-            border: none;
-            transform: scaleX(-1); /* Flip video horizontally */
+            display: block;
+            margin: 0 auto;
         }
 
         .hero h1 {
@@ -638,10 +636,7 @@
             <div class="container">
                 <div class="hero-container">
                     <div class="hero-video">
-                        <video autoplay muted loop playsinline>
-                            <source src="assets/crane with complete white background.mp4" type="video/mp4">
-                            您的瀏覽器不支援影片播放。
-                        </video>
+                        <img src="assets/cranes-video.gif" alt="Flying cranes animation" />
                     </div>
                     <div class="hero-content">
                         <h1>乘著AI的風 讓正法弘揚</h1>
