add hamburger for mobile view

--- a/index.html
+++ b/index.html
@@ -6,6 +6,81 @@
     <title>因陀羅華佛語典藏協會 AI時代的佛典計畫　</title>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+TC:wght@300;400;500;700&display=swap" rel="stylesheet">
     <style>
+        /* Hamburger styles */
+        .hamburger {
+            display: none;
+            flex-direction: column;
+            justify-content: center;
+            width: 28px;
+            height: 28px;
+            background: none;
+            border: none;
+            cursor: pointer;
+            z-index: 1001;
+        }
+        .hamburger span {
+            display: block;
+            width: 20px;
+            height: 2.5px;
+            margin: 3px auto;
+            background: #991B1B;
+            border-radius: 2px;
+            transition: all 0.3s;
+        }
+        /* Responsive nav */
+        @media (max-width: 900px) {
+            .nav-links {
+                position: fixed;
+                top: 0;
+                right: -100vw;
+                width: 50vw;
+                height: 100vh;
+                background: rgba(255,255,255,0.98);
+                box-shadow: -2px 0 8px rgba(0,0,0,0.05);
+                flex-direction: column;
+                justify-content: flex-start;
+                align-items: flex-start;
+                padding: 5rem 2rem 2rem 2rem;
+                gap: 2rem;
+                transition: right 0.3s;
+                z-index: 1000;
+            }
+            .nav-links.open {
+                right: 0;
+            }
+            .nav-links li {
+                width: 100%;
+            }
+            .nav-links a {
+                font-size: 1.4rem;
+                width: 100%;
+                display: block;
+            }
+            .hamburger {
+                display: flex;
+            }
+        }
+        @media (max-width: 900px) {
+            nav.container {
+                position: relative;
+            }
+        }
+        @media (max-width: 600px) {
+            .nav-links {
+                width: 90vw;
+            }
+        }
+        /* Hamburger active state (optional for animation) */
+        .hamburger.active span:nth-child(1) {
+            transform: translateY(8px) rotate(45deg);
+        }
+        .hamburger.active span:nth-child(2) {
+            opacity: 0;
+        }
+        .hamburger.active span:nth-child(3) {
+            transform: translateY(-8px) rotate(-45deg);
+        }
+
         * {
             margin: 0;
             padding: 0;
@@ -620,6 +695,11 @@
             <a href="#home" class="logo">
                 <img src="assets/red with only chinese text.png" alt="因陀羅華基金會" class="logo-image">
             </a>
+            <button class="hamburger" aria-label="Toggle navigation">
+                <span></span>
+                <span></span>
+                <span></span>
+            </button>
             <ul class="nav-links">
                 <li><a href="#home">首頁</a></li>
                 <li><a href="#mission">使命</a></li>
@@ -926,6 +1006,29 @@
             </div>
         </section>
     </main>
+
+    <!-- Hamburger Menu Script -->
+    <script>
+      document.addEventListener('DOMContentLoaded', function() {
+        const hamburger = document.querySelector('.hamburger');
+        const navLinks = document.querySelector('.nav-links');
+        if (hamburger && navLinks) {
+          hamburger.addEventListener('click', function() {
+            hamburger.classList.toggle('active');
+            navLinks.classList.toggle('open');
+          });
+          // Close menu when a link is clicked (on mobile)
+          document.querySelectorAll('.nav-links a').forEach(link => {
+            link.addEventListener('click', function() {
+              if(window.innerWidth <= 900) {
+                hamburger.classList.remove('active');
+                navLinks.classList.remove('open');
+              }
+            });
+          });
+        }
+      });
+    </script>
 
     <!-- 基金會註冊資訊 -->
     <section class="foundation-registration">
