--- a/index.html
+++ b/index.html
@@ -690,7 +690,7 @@
             <ul class="nav-links">
                 <li><a href="#home">首頁</a></li>
                 <li><a href="#mission">使命</a></li>
-                <li><a href="#projects">計劃項目</a></li>
+                <li><a href="#projects">計畫項目</a></li>
                 <li><a href="#involvement">護持參與</a></li>
                 <li><a href="#about">關於我們</a></li>
             </ul>
